Started to log entries
