# src/main/java/com/kienast/authservice/controller/MfaController.java
@@ -19,6 +19,9 @@ import com.kienast.authservice.rest.api.model.TokenModel;
 import com.kienast.authservice.rest.api.model.VerifiedModel;
 import com.kienast.authservice.service.TokenService;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.slf4j.MDC;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
@@ -34,127 +37,128 @@ import io.swagger.v3.oas.annotations.Operation;
 
 @RestController
 public class MfaController implements MfaApi {
-	
+
 	@Autowired
-    private SecretGenerator secretGenerator;
+	private SecretGenerator secretGenerator;
 
-    @Autowired
-    private QrDataFactory qrDataFactory;
+	@Autowired
+	private QrDataFactory qrDataFactory;
 
-    @Autowired
-    private QrGenerator qrGenerator;
-    
-    @Autowired
-    private CodeVerifier verifier;
-    
-    @Autowired
-    private UserRepository userRepository;
-    
-    @Autowired
+	@Autowired
+	private QrGenerator qrGenerator;
+
+	@Autowired
+	private CodeVerifier verifier;
+
+	@Autowired
+	private UserRepository userRepository;
+
+	@Autowired
 	private TokenService tokenService;
-    
-   
 
-    @Value("${companyName}")
-    private String companyName;
+	private static Logger logger = LogManager.getLogger(AppController.class.getName());
 
-    @Override
-    @Operation(description = "setup MFA")
-	public ResponseEntity<QRCodeModel> mfaSetup(@Valid TokenModel tokenModel) {
-    	
-    	User user = null;
-    	
-    	
-    	if (!tokenService.validateToken(tokenModel.getToken())) {
-			throw(new NotAuthorizedException(tokenModel.getToken()));
+	@Value("${logging.level.com.kienast.authservice}")
+	private String loglevel;
+
+	@Value("${companyName}")
+	private String companyName;
+
+	@Override
+	@Operation(description = "setup MFA")
+	public ResponseEntity<QRCodeModel> mfaSetup(String JWT, String xRequestID, String SOURCE_IP,
+			@Valid TokenModel tokenModel) {
+
+		initializeLogInfo(xRequestID, SOURCE_IP, "1");
+
+		User user = null;
+
+		if (!tokenService.validateToken(tokenModel.getToken())) {
+			throw (new NotAuthorizedException(tokenModel.getToken()));
 		}
-    	
-		
+
 		try {
 			user = findByUsername(tokenModel.getUsername());
-		}catch(java.util.NoSuchElementException e) {
+		} catch (java.util.NoSuchElementException e) {
 			System.out.println(e.getMessage());
 			e.printStackTrace();
-			throw(new NotAuthorizedException(tokenModel.getUsername()));
+			throw (new NotAuthorizedException(tokenModel.getUsername()));
 		}
-    	
-		
+
 		// Generate and store the secret
-        String secret = secretGenerator.generate();
-        
-        user.setSecret(secret);
-        userRepository.save(user);
+		String secret = secretGenerator.generate();
 
-        QrData data = qrDataFactory.newBuilder()
-            .label(user.getUsername())
-            .secret(secret)
-            .issuer(companyName)
-            .build();
+		user.setSecret(secret);
+		userRepository.save(user);
 
-        // Generate the QR code image data as a base64 string which
-        // can be used in an <img>
+		QrData data = qrDataFactory.newBuilder().label(user.getUsername()).secret(secret).issuer(companyName).build();
 
-            
-        String qrCodeImage = ""; 
+		// Generate the QR code image data as a base64 string which
+		// can be used in an <img>
+
+		String qrCodeImage = "";
 		try {
-			qrCodeImage = getDataUriForImage(
-			  qrGenerator.generate(data), 
-			  qrGenerator.getImageMimeType()
-			);
+			qrCodeImage = getDataUriForImage(qrGenerator.generate(data), qrGenerator.getImageMimeType());
 		} catch (QrGenerationException e) {
 			e.printStackTrace();
 		}
-        //return qrCodeImage;
-        Map<String, Object> map = new HashMap<>();
-        map.put("qrCode", qrCodeImage);
-        
-        QRCodeModel qrCodeModel = new QRCodeModel();
-        qrCodeModel.setQrcode(map.get("qrCode").toString());
-        
-        
+		// return qrCodeImage;
+		Map<String, Object> map = new HashMap<>();
+		map.put("qrCode", qrCodeImage);
+
+		QRCodeModel qrCodeModel = new QRCodeModel();
+		qrCodeModel.setQrcode(map.get("qrCode").toString());
+
 		return ResponseEntity.ok(qrCodeModel);
 	}
 
 	@Override
 	@Operation(description = "verify MFA")
-	public ResponseEntity<VerifiedModel> mfaVerify(@Valid MFATokenVerificationModel mfATokenVerificationModel) {
-		
+	public ResponseEntity<VerifiedModel> mfaVerify(String JWT, String xRequestID, String SOURCE_IP,
+			@Valid MFATokenVerificationModel mfATokenVerificationModel) {
+
+		initializeLogInfo(xRequestID, SOURCE_IP, "1");
+
 		VerifiedModel verified = new VerifiedModel();
 		User user = null;
-		
+
 		if (!tokenService.validateToken(mfATokenVerificationModel.getJwtToken())) {
-			throw(new NotAuthorizedException(mfATokenVerificationModel.getJwtToken()));
+			throw (new NotAuthorizedException(mfATokenVerificationModel.getJwtToken()));
 		}
-		
+
 		try {
 			user = findByUsername(mfATokenVerificationModel.getUsername());
-		}catch(java.util.NoSuchElementException e) {
+		} catch (java.util.NoSuchElementException e) {
 			System.out.println(e.getMessage());
 			e.printStackTrace();
-			throw(new NotAuthorizedException(mfATokenVerificationModel.getUsername()));
+			throw (new NotAuthorizedException(mfATokenVerificationModel.getUsername()));
 		}
-		
+
 		if (verifier.isValidCode(user.getSecret(), mfATokenVerificationModel.getMfaToken())) {
 			verified.setVerificationMessage("CORRECT CODE");
 			Calendar calendar = Calendar.getInstance();
 			calendar.add(Calendar.WEEK_OF_YEAR, +1);
 			long nextWeek = calendar.getTime().getTime();
-			
+
 			user.setNextVerification(new Timestamp(nextWeek));
-	        userRepository.save(user);
-        }else {
-        	verified.setVerificationMessage("INCORRECT CODE");	
-        }
+			userRepository.save(user);
+		} else {
+			verified.setVerificationMessage("INCORRECT CODE");
+		}
 
 		return ResponseEntity.ok(verified);
-		
-	}
-	
-	private User findByUsername(String username) {
-		return userRepository.findAll().stream().filter(
-				item -> item.getUsername().equals(username)
-				).findFirst().get();
+
 	}
 
+	private User findByUsername(String username) {
+		return userRepository.findAll().stream().filter(item -> item.getUsername().equals(username)).findFirst().get();
+	}
+
+	private void initializeLogInfo(String requestId, String sourceIP, String userId) {
+		MDC.put("SYSTEM_LOG_LEVEL", loglevel);
+		MDC.put("REQUEST_ID", requestId);
+		MDC.put("SOURCE_IP", sourceIP);
+		MDC.put("USER_ID", userId);
+	}
 
 }
